--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+
+body, html {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  min-width: 100%;
+}
+
+body {
+  font-family: 'Courier New', Courier, monospace;
+}
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
