Added create task link when nothing is selected

--- a/src/app/task/current-task/current-task.component.html
+++ b/src/app/task/current-task/current-task.component.html
@@ -18,5 +18,5 @@
   </mat-card>
 </div>
 <ng-template #noCurrentTask>
-  <h3>Select or create a task!</h3>
+  <h3>Select or <a (click)="createTask()" href="#">create</a> a task!</h3>
 </ng-template>
