Fixed create button color, added task list toolbar

--- a/src/app/task/task-list/task-list.component.html
+++ b/src/app/task/task-list/task-list.component.html
@@ -1,4 +1,5 @@
 <h2>Current Tasks</h2>
+<app-task-list-toolbar></app-task-list-toolbar>
 <div *ngIf="tasks$ | async as tasks; else loading" >
   <ng-container *ngIf="tasks.length; else noTasks">
     <mat-grid-list cols="4">
