--- a/src/app/task/new-task-button/new-task-button.component.html
+++ b/src/app/task/new-task-button/new-task-button.component.html
@@ -1,4 +1,4 @@
-<button mat-raised-button *ngIf="isTypeButton(); else link" (click)="openNewTaskDialog()">{{label}}</button>
+<button mat-raised-button color="primary" *ngIf="isTypeButton(); else link" (click)="openNewTaskDialog()">{{label}}</button>
 <ng-template #link>
   <a href="#" (click)="openNewTaskDialog()">{{label}}</a>
 </ng-template>
